[gd_scene load_steps=2 format=2]

[ext_resource path="res://Script/Game.gd" type="Script" id=1]

[node name="Game" type="Node"]
script = ExtResource( 1 )

[node name="Hbox_Nou" type="HBoxContainer" parent="."]
margin_left = 714.318
margin_top = 323.551
margin_right = 867.318
margin_bottom = 363.551
__meta__ = {
"_edit_group_": true
}

[node name="Label" type="Label" parent="Hbox_Nou"]
margin_top = 13.0
margin_right = 69.0
margin_bottom = 27.0
text = "Nouriture :"

[node name="NouTot" type="Label" parent="Hbox_Nou"]
margin_left = 73.0
margin_top = 13.0
margin_right = 81.0
margin_bottom = 27.0
text = "0"

[node name="NouP" type="Label" parent="Hbox_Nou"]
margin_left = 85.0
margin_top = 13.0
margin_right = 93.0
margin_bottom = 27.0
text = "0"

[node name="NouM" type="Label" parent="Hbox_Nou"]
margin_left = 97.0
margin_top = 13.0
margin_right = 105.0
margin_bottom = 27.0
text = "0"

[node name="Hbox_Hab" type="HBoxContainer" parent="."]
margin_left = 75.1648
margin_top = 25.9212
margin_right = 176.165
margin_bottom = 65.9212
__meta__ = {
"_edit_group_": true
}

[node name="Label" type="Label" parent="Hbox_Hab"]
margin_top = 13.0
margin_right = 77.0
margin_bottom = 27.0
text = "Habitant(s) :"

[node name="Hab" type="Label" parent="Hbox_Hab"]
margin_left = 81.0
margin_top = 13.0
margin_right = 89.0
margin_bottom = 27.0
text = "0"

[node name="HabAdd" type="Label" parent="Hbox_Hab"]
margin_left = 93.0
margin_top = 13.0
margin_right = 101.0
margin_bottom = 27.0
custom_colors/font_color = Color( 1, 1, 1, 1 )
text = "0"

[node name="HabMax" type="Label" parent="Hbox_Hab"]
margin_left = 105.0
margin_top = 13.0
margin_right = 113.0
margin_bottom = 27.0
custom_colors/font_color = Color( 1, 1, 1, 1 )
text = "0"

[node name="NouvTour" type="Button" parent="."]
margin_left = 493.61
margin_top = 33.1768
margin_right = 593.61
margin_bottom = 53.1768
text = "Nouveau Tour"

[node name="ItemList2" type="ItemList" parent="."]
margin_left = 604.492
margin_top = 130.302
margin_right = 788.492
margin_bottom = 243.302

[node name="ItemList3" type="ItemList" parent="."]
margin_left = 307.491
margin_top = 278.302
margin_right = 491.491
margin_bottom = 391.302

[node name="BtnAdd" type="Button" parent="."]
margin_left = 507.692
margin_top = 133.383
margin_right = 585.692
margin_bottom = 153.383
text = "Construire"

[node name="BtnCel" type="Button" parent="."]
margin_left = 508.792
margin_top = 165.563
margin_right = 586.792
margin_bottom = 185.563
text = "DÃ©truire"

[node name="BtnHabAdd" type="Button" parent="."]
margin_left = 47.8098
margin_top = 74.5505
margin_right = 112.81
margin_bottom = 94.5505
rect_pivot_offset = Vector2( 34.1303, 10.0531 )
text = "Inviter"

[node name="BtnHabRem" type="Button" parent="."]
margin_left = 141.669
margin_top = 73.7617
margin_right = 206.669
margin_bottom = 93.7617
rect_pivot_offset = Vector2( 34.1303, 10.0531 )
text = "Banir"

[node name="Tree" type="Tree" parent="."]
margin_left = 198.053
margin_top = 130.03
margin_right = 494.053
margin_bottom = 254.03
columns = 3
hide_root = true
select_mode = 1
[connection signal="button_down" from="NouvTour" to="." method="_on_NouvTour_button_down"]
[connection signal="button_down" from="BtnAdd" to="." method="_on_BtnAdd_button_down"]
[connection signal="button_down" from="BtnCel" to="." method="_on_BtnCel_button_down"]
[connection signal="button_down" from="BtnHabAdd" to="." method="_on_BtnHabAdd_button_down"]
[connection signal="button_down" from="BtnHabRem" to="." method="_on_BtnHabRem_button_down"]
